index completed, dark mode added but dosn't work correctly

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -716,10 +716,6 @@ video {
   grid-column-start: 3;
 }
 
-.col-start-5 {
-  grid-column-start: 5;
-}
-
 .float-start {
   float: inline-start;
 }
@@ -763,10 +759,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .block {
@@ -1036,6 +1028,10 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pe-3 {
   padding-inline-end: 0.75rem;
 }
@@ -1046,22 +1042,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pb-56 {
-  padding-bottom: 14rem;
-}
-
-.pb-28 {
-  padding-bottom: 7rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
 }
 
 .text-center {
@@ -1209,6 +1189,30 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.dark\:bg-black:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-white:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:fill-white:is(.dark *) {
+  fill: #fff;
+}
+
+.dark\:text-white:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
 @media (min-width: 768px) {
   .md\:mt-10 {
     margin-top: 2.5rem;
@@ -1239,18 +1243,6 @@ video {
   .lg\:block {
     display: block;
   }
-
-  .lg\:pb-24 {
-    padding-bottom: 6rem;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .lg\:pb-4 {
-    padding-bottom: 1rem;
-  }
 }
 
 @media (min-width: 1280px) {
@@ -1274,12 +1266,12 @@ video {
     grid-column-start: 2;
   }
 
-  .xl\:col-start-5 {
-    grid-column-start: 5;
-  }
-
   .xl\:col-start-3 {
     grid-column-start: 3;
+  }
+
+  .xl\:col-start-5 {
+    grid-column-start: 5;
   }
 
   .xl\:mt-14 {
@@ -1317,20 +1309,30 @@ video {
     padding-bottom: 1.5rem;
   }
 
-  .xl\:ps-4 {
-    padding-inline-start: 1rem;
-  }
-
-  .xl\:pb-24 {
-    padding-bottom: 6rem;
-  }
-
   .xl\:pb-4 {
     padding-bottom: 1rem;
+  }
+
+  .xl\:ps-4 {
+    padding-inline-start: 1rem;
   }
 
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
+  .\32xl\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .\32xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
